--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,48 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Encode Sans Semi Expanded", sans-serif;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
 
+header {
+  width: 100%; }
+  header:before, header:after {
+    content: "";
+    display: table; }
+  header:after {
+    clear: both; }
+  header .header_logo {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #d3d3d3; }
+    header .header_logo img {
+      display: inline-block;
+      width: 60px; }
+    header .header_logo .header_logo_heading {
+      display: inline-block;
+      height: 60px;
+      text-align: left; }
+      header .header_logo .header_logo_heading h4 {
+        font-size: 1.3em;
+        color: #00001a; }
+      header .header_logo .header_logo_heading h5 {
+        font-size: 0.8em;
+        text-transform: uppercase;
+        color: #b3b3b3; }
+  header nav {
+    width: 100%; }
+    header nav ul {
+      width: 100%;
+      padding-left: 10%; }
+      header nav ul li {
+        display: inline-block;
+        padding: 1em 0;
+        margin: 0 1em;
+        color: #00001a; }
+        header nav ul li:hover {
+          color: red;
+          border-bottom: 2px solid red; }
 
 /*# sourceMappingURL=main.css.map */
