--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -18,3 +18,13 @@
 	-o-background-size: cover;
 	background-size: cover; 
 }
+
+@mixin clearfix {
+	&:before, &:after {
+		content: "";
+		display: table;
+	}
+	&:after {
+		clear: both;
+	}
+}
