--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,5 +1,6 @@
 $red-col: #ff0000;
 $back-col: #f0f0f5;
-$head-col: #001a4d;
-$font-col: #0080ff;
-$font-fam: Arial, 'Helvetica Neue', sans-serif;
+$head-col: #00001a;
+$font-col: #b3b3b3;
+$light-grey: #d3d3d3;
+$font-fam: 'Encode Sans Semi Expanded', sans-serif;
