#HCAA-10 Made changes in header

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -3,4 +3,8 @@ $back-col: #f0f0f5;
 $head-col: #00001a;
 $font-col: #b3b3b3;
 $light-grey: #d3d3d3;
+
 $font-fam: 'Encode Sans Semi Expanded', sans-serif;
+
+$tablet: "(max-width: 1250px)";
+$mobile: "(max-width: 640px)";
