--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -3,6 +3,9 @@ $back-col: #f0f0f5;
 $head-col: #00001a;
 $font-col: #b3b3b3;
 $light-grey: #d3d3d3;
+$light-blue: #edf1f8;
+$white-col: #fff;
+$section-font: #003d66;
 
 $font-fam: 'Encode Sans Semi Expanded', sans-serif;
 
