--- a/scss/main.scss
+++ b/scss/main.scss
@@ -240,17 +240,17 @@ hr {
 
 .solutions-section__column--second {
     margin-left: 2.5rem;
-    width: 100%;
+    width: 100%;    
+}
 
-    h2 {
-        color: $head-col;
-        font-size: 2.4rem;
-        margin-bottom: 2rem;
+h2 {
+    color: $head-col;
+    font-size: 2.4rem;
+    margin-bottom: 2rem;
 
-        span {
-            font-weight: normal;
-            font-size: 2.6rem;
-        }
+    span {
+        font-weight: normal;
+        font-size: 2.6rem;
     }
 }
 
@@ -273,4 +273,24 @@ hr {
         }
     }
 
+}
+
+.expertise-section {
+    padding-left: 36rem;
+
+    h4 {
+        text-transform: uppercase;
+        border-top: 1px solid $light-grey;
+        padding: 1rem 0;
+        font-size: 1.2rem;
+    }
+
+    h4:last-child {
+        border-bottom: 1px solid $light-grey;
+    }
+
+    p {
+        color: $section-font;
+        margin-bottom: 1rem;
+    }
 }
