--- a/scss/main.scss
+++ b/scss/main.scss
@@ -294,3 +294,57 @@ h2 {
         margin-bottom: 1rem;
     }
 }
+
+.info-section {
+    display: flex;
+    padding: 1rem 15rem;
+    margin-top: 4rem;
+    background: $light-blue;
+}
+
+.info-section__part {
+    width: 50%;
+}
+
+.info-section__part--left {
+    h4 {
+        font-size: 1.5rem;
+        margin: 2rem 0;
+    }
+
+    img {
+        width: 2rem;
+    }
+}
+
+.info-section__part--right {
+
+    h5 {
+        text-transform: uppercase;
+        font-size: 1rem;
+        padding: 2rem;
+
+    }
+
+    div {
+        border: 1px solid $light-grey;
+        
+        p {
+            display: inline;
+            color: $section-font;
+            font-size: 1rem;
+            line-height: 3.2rem;
+            margin-left: 1rem;
+            
+        }   
+
+        a {
+            float: right;
+            text-decoration: none;
+            padding: 1rem 2rem;
+            color: $white-col;
+            background: $red-col;
+            font-weight: bold;
+        }
+    }
+}
