#HCAA-15 Made changes in all sections

--- a/css/main.css
+++ b/css/main.css
@@ -32,12 +32,14 @@
 
 .header__menu {
   display: flex;
-  padding-left: 13rem; }
+  padding-left: 8rem;
+  border-top: 1px solid #d3d3d3; }
   .header__menu a {
     text-decoration: none;
     display: inline-block;
     padding: 1rem 0;
     margin: 0 1rem;
+    font-size: 0.8rem;
     color: #00001a; }
     .header__menu a:hover {
       color: #ff0000;
@@ -46,7 +48,7 @@
 main {
   background: url("../Images/consultancy.jpg");
   background-size: cover;
-  padding: 18rem 13rem; }
+  padding: 18rem 10rem; }
   main h1 {
     color: white;
     font-size: 3rem; }
@@ -58,7 +60,7 @@ main {
     width: 5rem; }
 
 section {
-  padding: 3rem 13rem 0; }
+  padding: 3rem 8rem 0; }
 
 .stats-section {
   display: flex;
@@ -68,44 +70,46 @@ section {
   padding: 0 2rem; }
 
 .stats-section__column--first {
-  width: 25%; }
+  width: 30%; }
   .stats-section__column--first h3 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #00001a;
     margin-bottom: 1rem; }
   .stats-section__column--first li {
     margin: 1rem 0 1rem;
     border-bottom: 1px solid #edf1f8;
-    padding: 0.2rem; }
+    padding: 0.1rem; }
   .stats-section__column--first a {
     text-decoration: none;
     color: #00001a;
-    line-height: 1.5rem; }
+    line-height: 1.5rem;
+    font-size: 0.9rem; }
     .stats-section__column--first a:hover {
       color: #ff0000; }
   .stats-section__column--first .stats-section__brochure {
     background-color: #edf1f8;
-    padding: 3rem 2.5rem; }
+    padding: 2rem 1.5rem; }
     .stats-section__column--first .stats-section__brochure h4 {
       font-size: 1.5rem;
       color: #00001a; }
     .stats-section__column--first .stats-section__brochure p {
+      font-size: 0.8rem;
       color: #00001a;
-      margin: 3rem 0 3rem; }
+      margin: 2rem 0; }
     .stats-section__column--first .stats-section__brochure a {
       color: #fff;
       background-color: #ff0000;
-      padding: 1rem 2rem;
+      padding: 0.5rem 1rem;
       font-weight: bold; }
 
 .stats-section__column--second {
-  width: 40%; }
+  width: 50%; }
   .stats-section__column--second div {
     background-color: #edf1f8;
     transform: skew(-30deg, 0deg); }
     .stats-section__column--second div h2 {
       color: #00001a;
-      font-size: 2.4rem;
+      font-size: 2rem;
       margin-left: 2rem;
       transform: skew(30deg, 0deg); }
       .stats-section__column--second div h2 span {
@@ -117,7 +121,8 @@ section {
     font-size: 1.2rem; }
   .stats-section__column--second p {
     text-align: justify;
-    color: #003d66; }
+    color: #003d66;
+    font-size: 0.8rem; }
 
 hr {
   display: block;
@@ -127,11 +132,12 @@ hr {
   width: 3rem; }
 
 .stats-section__column--third {
-  width: 30%; }
+  width: 40%; }
   .stats-section__column--third p {
-    color: #003d66; }
+    color: #003d66;
+    font-size: 0.8rem; }
   .stats-section__column--third img {
-    width: 90%;
+    width: 100%;
     height: 70%;
     margin-top: 2rem; }
 
@@ -149,11 +155,11 @@ hr {
   margin-left: 2rem; }
   .solutions-section__column--first h4 {
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-bottom: 1rem; }
   .solutions-section__column--first p {
     color: #fff;
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     font-weight: bold;
     line-height: 1.2rem; }
   .solutions-section__column--first a {
@@ -162,7 +168,7 @@ hr {
     text-decoration: none;
     border: 1px solid #fff;
     color: #fff;
-    padding: 0.7rem 1.3rem; }
+    padding: 0.5rem 1rem; }
     .solutions-section__column--first a:hover {
       background: #fff;
       color: #ff0000; }
@@ -173,7 +179,7 @@ hr {
 
 h2 {
   color: #00001a;
-  font-size: 2.4rem;
+  font-size: 2rem;
   margin-bottom: 2rem; }
   h2 span {
     font-weight: normal;
@@ -187,27 +193,29 @@ h2 {
     background: #edf1f8; }
     .solutions-section__chemicals div h4 {
       color: #ff0000;
-      font-size: 1.2rem;
+      font-size: 1rem;
       margin-bottom: 1rem; }
     .solutions-section__chemicals div p {
-      color: #003d66; }
+      color: #003d66;
+      font-size: 0.8rem; }
 
 .expertise-section {
-  padding-left: 36rem; }
+  padding-left: 28rem; }
   .expertise-section h4 {
     text-transform: uppercase;
     border-top: 1px solid #d3d3d3;
     padding: 1rem 0;
-    font-size: 1.2rem; }
+    font-size: 1rem; }
   .expertise-section h4:last-child {
     border-bottom: 1px solid #d3d3d3; }
   .expertise-section p {
     color: #003d66;
-    margin-bottom: 1rem; }
+    margin-bottom: 1rem;
+    font-size: 0.8rem; }
 
 .info-section {
   display: flex;
-  padding: 1rem 15rem;
+  padding: 1rem 10rem;
   margin-top: 4rem;
   background: #edf1f8; }
 
@@ -215,27 +223,30 @@ h2 {
   width: 50%; }
 
 .info-section__part--left h4 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin: 2rem 0; }
 .info-section__part--left img {
-  width: 2rem; }
+  width: 1.5rem; }
 
 .info-section__part--right h5 {
+  font-size: 1rem;
   text-transform: uppercase;
   font-size: 1rem;
-  padding: 2rem; }
+  padding: 2rem 0; }
 .info-section__part--right div {
   border: 1px solid #d3d3d3; }
   .info-section__part--right div p {
     display: inline;
     color: #003d66;
     font-size: 1rem;
-    line-height: 3.2rem;
-    margin-left: 1rem; }
+    line-height: 2.6rem;
+    margin-left: 1rem;
+    font-size: 0.8rem; }
   .info-section__part--right div a {
+    font-size: 0.8rem;
     float: right;
     text-decoration: none;
-    padding: 1rem 2rem;
+    padding: 0.8rem 1.8rem;
     color: #fff;
     background: #ff0000;
     font-weight: bold; }
