--- a/css/main.css
+++ b/css/main.css
@@ -251,4 +251,26 @@ h2 {
     background: #ff0000;
     font-weight: bold; }
 
+footer {
+  background: #edf1f8;
+  padding: 2rem 10rem; }
+  footer p {
+    float: left;
+    font-size: 0.7em;
+    color: #003d66; }
+  footer nav {
+    float: left;
+    padding-left: 4rem; }
+    footer nav ul li {
+      display: inline-block;
+      transform: skew(-20deg);
+      border-right: 1px solid #d3d3d3; }
+    footer nav a {
+      display: inline-block;
+      transform: skew(20deg);
+      text-decoration: none;
+      font-size: 0.8rem;
+      padding: 0 0.5rem;
+      color: #003d66; }
+
 /*# sourceMappingURL=main.css.map */
