--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,16 +3,16 @@
 
 @include main;
 
-.header {
+.mt-c-header {
     display: flex;
     flex-direction: column;
 }
 
-.header__logo {
+.mt-c-header__logo {
         display: flex;
         justify-content: center;
 
-    .header__img {
+    .mt-c-header__img {
         display: inline-block;
             
         img {
@@ -20,7 +20,7 @@
         }
     }
 
-    .header__name {
+    .mt-c-header__name {
         display: inline-block;
         padding-top: 1rem;
         padding-left: 1rem;
@@ -38,7 +38,7 @@
     }
 }
 
-.header__menu {
+.mt-c-header__menu {
         display: flex;
         padding-left: 8rem;
         border-top: 1px solid $light-grey;
@@ -59,13 +59,13 @@
     }
 }
 
-main {
+.mt-c-consultancy {
     background: url("../Images/consultancy.jpg");
     background-size: cover;
     padding: 18rem 10rem;
 
     h1 {
-        color: white;
+        color: $white-col;
         font-size: 3rem;
     }
 
@@ -82,16 +82,16 @@ section {
     padding: 3rem 8rem 0;
 }
 
-.stats-section {
+.mt-l-stats-section {
     display: flex;
     flex-direction: row;
 }
 
-.stats-section__column {
+.mt-c-stats-section__column {
     padding: 0 2rem;
 }
 
-.stats-section__column--first {
+.mt-c-stats-section-column--first {
     width: 30%;   
     
     h3 {
@@ -117,7 +117,7 @@ section {
         }
     }
 
-    .stats-section__brochure {
+    .mt-c-stats-section__brochure {
         background-color: $light-blue;
         padding: 2rem 1.5rem;
 
@@ -142,7 +142,7 @@ section {
     }
 }
 
-.stats-section__column--second {
+.mt-c-stats-section-column--second {
     width: 50%;
 
     div {
@@ -184,7 +184,7 @@ hr {
     width: 3rem;
 }
 
-.stats-section__column--third {
+.mt-c-stats-section-column--third {
     width: 40%;
 
     p {
@@ -200,16 +200,16 @@ hr {
     
 }
 
-.solutions-section {
+.mt-l-solutions-section {
     display: flex;
     flex-direction: row;
 }
 
-.solutions-section__column {
+.mt-u-solutions-section__column {
     padding: 0 2rem;
 }
 
-.solutions-section__column--first {
+.mt-c-solutions-section-column--first {
     background-color: $red-col;
     padding: 2rem;
     width: 26%;
@@ -244,7 +244,7 @@ hr {
     }
 }
 
-.solutions-section__column--second {
+.mt-c-solutions-section-column--second {
     margin-left: 2.5rem;
     width: 100%;    
 }
@@ -260,7 +260,7 @@ h2 {
     }
 }
 
-.solutions-section__chemicals {
+.mt-c-solutions-section__chemicals {
     display: flex;
 
     div {
@@ -282,7 +282,7 @@ h2 {
 
 }
 
-.expertise-section {
+.mt-l-expertise-section {
     padding-left: 28rem;
 
     h4 {
@@ -303,18 +303,18 @@ h2 {
     }
 }
 
-.info-section {
+.mt-l-info-section {
     display: flex;
     padding: 1rem 10rem;
     margin-top: 4rem;
     background: $light-blue;
 }
 
-.info-section__part {
+.mt-u-info-section__part {
     width: 50%;
 }
 
-.info-section__part--left {
+.mt-c-info-section-part--left {
     h4 {
         font-size: 1.2rem;
         margin: 2rem 0;
@@ -325,7 +325,7 @@ h2 {
     }
 }
 
-.info-section__part--right {
+.mt-c-info-section-part--right {
 
     h5 {
         font-size: 1rem;
